WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
168449
[WebRTC] Fix some missing exports after
r212401
https://bugs.webkit.org/show_bug.cgi?id=168449
Summary
[WebRTC] Fix some missing exports after r212401
youenn fablet
Reported
2017-02-16 11:31:00 PST
Som exports were missing in
r212401
Attachments
Patch
(2.08 KB, patch)
2017-02-16 11:31 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2017-02-16 11:31:45 PST
Created
attachment 301788
[details]
Patch
WebKit Commit Bot
Comment 2
2017-02-16 12:10:37 PST
Comment on
attachment 301788
[details]
Patch Clearing flags on attachment: 301788 Committed
r212456
: <
http://trac.webkit.org/changeset/212456
>
WebKit Commit Bot
Comment 3
2017-02-16 12:10:41 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug