[WebRTC] Fix some missing exports after r212401 https://bugs.webkit.org/show_bug.cgi?id=168449

Patch by Youenn Fablet <youenn@apple.com> on 2017-02-16
Reviewed by Alex Christensen.

* Source/webrtc/api/jsep.h:
* Source/webrtc/base/checks.h:

Canonical link: https://commits.webkit.org/185471@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@212456 268f45cc-cd09-0410-ab3c-d52691b4dbfc