Source/ThirdParty/libwebrtc/Source/webrtc/base/checks.h
@@ -230,7 +230,7 @@ class WEBRTC_EXPORT FatalMessageVoidify {
 // can match the Chromium behavior.
 
 // Like a stripped-down LogMessage from logging.h, except that it aborts.
-class FatalMessage {
+class WEBRTC_EXPORT FatalMessage {
  public:
   FatalMessage(const char* file, int line);
   // Used for RTC_CHECK_EQ(), etc. Takes ownership of the given string.
